
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_12__ TYPE_5__ ;
typedef struct TYPE_11__ TYPE_4__ ;
typedef struct TYPE_10__ TYPE_3__ ;
typedef struct TYPE_9__ TYPE_2__ ;
typedef struct TYPE_8__ TYPE_1__ ;


struct tegra_wm8753 {int util_data; } ;
struct snd_soc_card {TYPE_5__* dev; } ;
struct TYPE_12__ {struct device_node* of_node; } ;
struct platform_device {TYPE_5__ dev; } ;
struct device_node {int dummy; } ;
struct TYPE_11__ {TYPE_3__* cpus; TYPE_2__* platforms; TYPE_1__* codecs; } ;
struct TYPE_10__ {void* of_node; } ;
struct TYPE_9__ {void* of_node; } ;
struct TYPE_8__ {void* of_node; } ;


 int EINVAL ;
 int ENOMEM ;
 int GFP_KERNEL ;
 int dev_err (TYPE_5__*,char*,...) ;
 struct tegra_wm8753* devm_kzalloc (TYPE_5__*,int,int ) ;
 void* of_parse_phandle (struct device_node*,char*,int ) ;
 int snd_soc_card_set_drvdata (struct snd_soc_card*,struct tegra_wm8753*) ;
 int snd_soc_of_parse_audio_routing (struct snd_soc_card*,char*) ;
 int snd_soc_of_parse_card_name (struct snd_soc_card*,char*) ;
 int snd_soc_register_card (struct snd_soc_card*) ;
 struct snd_soc_card snd_soc_tegra_wm8753 ;
 int tegra_asoc_utils_fini (int *) ;
 int tegra_asoc_utils_init (int *,TYPE_5__*) ;
 TYPE_4__ tegra_wm8753_dai ;

__attribute__((used)) static int tegra_wm8753_driver_probe(struct platform_device *pdev)
{
 struct device_node *np = pdev->dev.of_node;
 struct snd_soc_card *card = &snd_soc_tegra_wm8753;
 struct tegra_wm8753 *machine;
 int ret;

 machine = devm_kzalloc(&pdev->dev, sizeof(struct tegra_wm8753),
          GFP_KERNEL);
 if (!machine)
  return -ENOMEM;

 card->dev = &pdev->dev;
 snd_soc_card_set_drvdata(card, machine);

 ret = snd_soc_of_parse_card_name(card, "nvidia,model");
 if (ret)
  goto err;

 ret = snd_soc_of_parse_audio_routing(card, "nvidia,audio-routing");
 if (ret)
  goto err;

 tegra_wm8753_dai.codecs->of_node = of_parse_phandle(np,
   "nvidia,audio-codec", 0);
 if (!tegra_wm8753_dai.codecs->of_node) {
  dev_err(&pdev->dev,
   "Property 'nvidia,audio-codec' missing or invalid\n");
  ret = -EINVAL;
  goto err;
 }

 tegra_wm8753_dai.cpus->of_node = of_parse_phandle(np,
   "nvidia,i2s-controller", 0);
 if (!tegra_wm8753_dai.cpus->of_node) {
  dev_err(&pdev->dev,
   "Property 'nvidia,i2s-controller' missing or invalid\n");
  ret = -EINVAL;
  goto err;
 }

 tegra_wm8753_dai.platforms->of_node = tegra_wm8753_dai.cpus->of_node;

 ret = tegra_asoc_utils_init(&machine->util_data, &pdev->dev);
 if (ret)
  goto err;

 ret = snd_soc_register_card(card);
 if (ret) {
  dev_err(&pdev->dev, "snd_soc_register_card failed (%d)\n",
   ret);
  goto err_fini_utils;
 }

 return 0;

err_fini_utils:
 tegra_asoc_utils_fini(&machine->util_data);
err:
 return ret;
}
